# AiENG_REPO1

./: .cursorrules  .env.example  .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_align_schema_with_spec.py  0003_add_performance_indexes.py  0004_add_rls.py
app/: __init__.py  config.py  db.py  main.py
app/dev/: __init__.py  debug_server.py
app/mcp/: server.py  sse_server.py  tools.py
app/middleware/: rate_limit.py  security.py
app/models/: __init__.py  analyst_rating.py  company.py  financial.py  stock_price.py  user.py
app/schemas/: __init__.py  analyst.py  common.py  company.py  financial.py  stock.py
app/services/: analyst_service.py  company_service.py  financial_service.py  metrics.py  stock_service.py
app/utils/: __init__.py  openapi_generator.py  rls.py
database/: rls_policies.sql
docs/: ARCHITECTURE.md  RLS.md  SCHEMA.md  SECURITY.md
scripts/: benchmark.py  seed.py
tests/: conftest.py  test_mcp_advanced.py  test_mcp_integration.py  test_openapi.py  test_pagination.py  test_performance.py  test_rate_limiting.py  test_rls.py  test_security_headers.py  test_tools_analyst.py  test_tools_compare.py  test_tools_financials.py  test_tools_handlers.py  test_tools_profile.py  test_tools_search.py  test_tools_stock.py
